Fix table alignment and html overflow

--- a/my-app/src/components/grid/Grid.css
+++ b/my-app/src/components/grid/Grid.css
@@ -13,7 +13,7 @@ table {
     display: block;
     width: 100%;
     border-collapse: collapse;
-    text-align: center;
+    text-align: left;
 }
 
 td {
